# scripts

./: pyproject.toml
.github/workflows/: update-links.yml
scripts/: fetch_python_links.py
